// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnPosition snapshots should render ColumnPosition 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--with-bottom-margin"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Position
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--two-inputs"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="x"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="x"
          >
            <div
              class="css-e5vky9 ScrubbableInput"
              data-test-box=""
              data-test-scrubbable-input="x"
            >
              <small
                class="css-1jnxvbp Typography Typography--neutral2 Typography--regular Typography--normal Typography--small"
                data-test-text=""
                style="text-align: inherit;"
              >
                X
              </small>
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="x"
              maxlength="6"
              type="number"
              value="0"
            />
          </div>
        </div>
        <div
          class="Tooltip"
        >
          <div
            class="Tooltip__content"
          >
            X - position
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="y"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="y"
          >
            <div
              class="css-e5vky9 ScrubbableInput"
              data-test-box=""
              data-test-scrubbable-input="y"
            >
              <small
                class="css-1jnxvbp Typography Typography--neutral2 Typography--regular Typography--normal Typography--small"
                data-test-text=""
                style="text-align: inherit;"
              >
                Y
              </small>
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="y"
              maxlength="6"
              type="number"
              value="0"
            />
          </div>
        </div>
        <div
          class="Tooltip"
        >
          <div
            class="Tooltip__content"
          >
            Y - position
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnPosition snapshots should render when some element has alignment 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--with-bottom-margin"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Position
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--two-inputs"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="x"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--disabled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="x"
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--disabled"
              data-test-box=""
              data-test-scrubbable-input="x"
            >
              <small
                class="css-1jnxvbp Typography Typography--neutral2 Typography--regular Typography--normal Typography--small"
                data-test-text=""
                style="text-align: inherit;"
              >
                X
              </small>
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="x"
              disabled=""
              maxlength="6"
              type="text"
              value="Locked"
            />
          </div>
        </div>
        <div
          class="Tooltip"
        >
          <div
            class="Tooltip__content"
          >
            X - position
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="y"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--disabled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="y"
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--disabled"
              data-test-box=""
              data-test-scrubbable-input="y"
            >
              <small
                class="css-1jnxvbp Typography Typography--neutral2 Typography--regular Typography--normal Typography--small"
                data-test-text=""
                style="text-align: inherit;"
              >
                Y
              </small>
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="y"
              disabled=""
              maxlength="6"
              type="text"
              value="Locked"
            />
          </div>
        </div>
        <div
          class="Tooltip"
        >
          <div
            class="Tooltip__content"
          >
            Y - position
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp ConstrainsView"
            data-test-box=""
          >
            <div
              class="ConstrainsView__constrain ConstrainsView__constrain--bottom"
            />
            <div
              class="ConstrainsView__constrain ConstrainsView__constrain--center-horizontal"
            />
            <div
              class="ConstrainsView__constrain ConstrainsView__constrain--center-vertical"
            />
            <div
              class="ConstrainsView__constrain ConstrainsView__constrain--left"
            />
            <div
              class="ConstrainsView__constrain ConstrainsView__constrain--right"
            />
            <div
              class="ConstrainsView__constrain ConstrainsView__constrain--top"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnPosition snapshots should render when values are mixed 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--with-bottom-margin"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Position
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--two-inputs"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="x"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="x"
          >
            <div
              class="css-e5vky9 ScrubbableInput"
              data-test-box=""
              data-test-scrubbable-input="x"
            >
              <small
                class="css-1jnxvbp Typography Typography--neutral2 Typography--regular Typography--normal Typography--small"
                data-test-text=""
                style="text-align: inherit;"
              >
                X
              </small>
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="x"
              maxlength="6"
              type="text"
              value="Mixed"
            />
          </div>
        </div>
        <div
          class="Tooltip"
        >
          <div
            class="Tooltip__content"
          >
            X - position
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="y"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="y"
          >
            <div
              class="css-e5vky9 ScrubbableInput"
              data-test-box=""
              data-test-scrubbable-input="y"
            >
              <small
                class="css-1jnxvbp Typography Typography--neutral2 Typography--regular Typography--normal Typography--small"
                data-test-text=""
                style="text-align: inherit;"
              >
                Y
              </small>
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="y"
              maxlength="6"
              type="text"
              value="Mixed"
            />
          </div>
        </div>
        <div
          class="Tooltip"
        >
          <div
            class="Tooltip__content"
          >
            Y - position
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
